--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
 <head>
   <meta charset="utf-8"/>
+  <title>Website Project</title>
 </head>
 <body>
-
+  <table width="100%" height="60" cellspacing="5" cellpadding="5" bgcolor="#000000">
+      <tr>
+        <td>
+          <table width="547" border="0" align="center" celpadding="1" cellspacing="1">
+            <td>
+            
+          </table>
+        </td>
+    </tr>
+  </table>
 </body>
 </html>
