--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <tr>
         <td>
           <table width="547" border="0" align="center" celpadding="1" cellspacing="1">
-            <td>
+            <td width="96"><font face="verdana, geneva, sans-serif" color="white"><h3>Home</h3></font></td>
             
           </table>
         </td>
