--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <table width="100%" height="60" cellspacing="5" cellpadding="5" bgcolor="#000000">
       <tr>
         <td>
-          <table width="547" border="0" align="center" celpadding="1" cellspacing="1">
+          <table width="100%" border="0" align="center" celpadding="1" cellspacing="1">
             <td width="96"><font face="verdana, geneva, sans-serif" color="white"><h3>Home</h3></font></td>
             
           </table>
